package Exceptions;

public class MediaAvailabilityException extends CustomException {
    public MediaAvailabilityException(String message) {
        super(message);
    }
}
