package Exceptions;

public class MemberException extends CustomException {
    public MemberException(String message) {
        super(message);
    }
}
